# EV-Energy-Intelligence-Engine-EEIE-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
docker/: api.Dockerfile  ui-requirements.txt  ui.Dockerfile
eeie/: __init__.py
eeie/api/: __init__.py  deps.py  main.py  schemas.py
eeie/api/routers/: battery.py  behavior.py  cost.py  evaluation.py  fleet.py  optimization.py  range.py  vehicles.py
eeie/config/: __init__.py  settings.py  tariffs.py  vehicles.py
eeie/db/: __init__.py  engine.py  hypertables.py  models.py
eeie/db/migrations/: env.py
eeie/db/migrations/versions/: 20260101_0000_0001_initial_schema.py  20260201_0000_0002_station_state.py  20260214_0000_0003_telemetry_events_data_source.py
eeie/evaluation/: __init__.py  ablation.py  metrics.py  scenarios.py
eeie/explainability/: __init__.py  insight.py  pdp.py  shap_engine.py
eeie/features/: __init__.py  builders.py
eeie/ingestion/: __init__.py  cli.py  datasets.py  loader.py  raw.py  schemas.py  unifier.py
eeie/ingestion/adapters/: __init__.py  _common.py  battery_charging.py  charging_patterns.py  germany_charging.py  station_availability.py
eeie/models/: __init__.py
eeie/models/battery/: __init__.py  correction.py  empirical.py  predict.py  train.py
eeie/models/behavior/: __init__.py  analyze.py  cluster.py  consumption.py  train.py
eeie/models/demand/: __init__.py  predict.py  tft.py  train.py  xgb.py
eeie/models/optimization/: __init__.py  env.py  milp.py  optimize.py  rl.py  train.py
eeie/models/range/: __init__.py  lstm.py  predict.py  train.py  xgb.py
eeie/simulation/: __init__.py  calibration.py  driving.py  engine.py  fleet.py  run.py  tariffs.py  weather.py
eeie/ui_streamlit/: Home.py
eeie/ui_streamlit/pages/: 1_Predict_Range.py  2_Optimize_Charging.py  3_Battery_Health.py  4_Cost_Analysis.py  5_Behavior.py  6_Vehicle_Cockpit.py  7_Strategy_Comparison.py
scripts/: evaluate.py  train_all.py
tests/: conftest.py  test_api.py  test_calibration.py  test_evaluation.py  test_explainability.py  test_features.py  test_models.py  test_optimization.py  test_simulator.py
tests/ingestion/: test_adapter_common.py  test_battery_charging.py  test_charging_patterns.py  test_germany_adapter.py  test_raw_resolver.py  test_registry.py  test_station_availability_adapter.py  test_unifier.py
